--- a/src/Zaabee.CodeTimer/Zaabee.CodeTimer.csproj
+++ b/src/Zaabee.CodeTimer/Zaabee.CodeTimer.csproj
@@ -3,11 +3,11 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageVersion>2022.4.0</PackageVersion>
-        <Version>2022.4.0</Version>
+        <PackageVersion>2022.6.0</PackageVersion>
+        <Version>2022.6.0</Version>
         <Authors>Mutuduxf</Authors>
         <Company>Mutuduxf</Company>
-        <PackageProjectUrl>https://github.com/Mutuduxf/Zaabee.Utils</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/PicoHex/Zaabee.Utils</PackageProjectUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Description>From http://blog.zhaojie.me/2009/03/codetimer.html</Description>
         <PackageTags>Code Timer</PackageTags>
