--- a/src/Zaabee.NumeralSystemConverter/Zaabee.NumeralSystemConverter.csproj
+++ b/src/Zaabee.NumeralSystemConverter/Zaabee.NumeralSystemConverter.csproj
@@ -3,16 +3,19 @@
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net6.0;net8.0;net9.0</TargetFrameworks>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageVersion>2024.1.2</PackageVersion>
-        <Version>2024.1.2</Version>
+        <PackageVersion>2024.1.3</PackageVersion>
+        <Version>2024.1.3</Version>
         <Authors>Mutuduxf</Authors>
         <Company>Mutuduxf</Company>
         <PackageTags>Zaabee;Extensions;Numeral System Converter;Binary;Octal;Decimalism;Hexadecimal;Base36;Base62</PackageTags>
         <Description>Numeral System Converter for C#</Description>
-        <PackageProjectUrl>https://github.com/PicoHex/Zaabee.Utils</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/PicoHex</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/PicoHex/Zaabee.Utils</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
+        <Authors>Roman Du</Authors>
     </PropertyGroup>
 
 </Project>
