--- a/src/Zaabee.NumeralSystemConverter/Zaabee.NumeralSystemConverter.csproj
+++ b/src/Zaabee.NumeralSystemConverter/Zaabee.NumeralSystemConverter.csproj
@@ -2,20 +2,31 @@
 
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net6.0;net8.0;net9.0</TargetFrameworks>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageVersion>2024.1.3</PackageVersion>
-        <Version>2024.1.3</Version>
-        <Authors>Mutuduxf</Authors>
-        <Company>Mutuduxf</Company>
-        <PackageTags>Zaabee;Extensions;Numeral System Converter;Binary;Octal;Decimalism;Hexadecimal;Base36;Base62</PackageTags>
+        <PackageVersion>2024.1.4</PackageVersion>
+        <Version>2024.1.4</Version>
         <Description>Numeral System Converter for C#</Description>
+        <PackageTags>Zaabee;Extensions;Numeral System Converter;Binary;Octal;Decimalism;Hexadecimal;Base36;Base62</PackageTags>
         <PackageProjectUrl>https://github.com/PicoHex</PackageProjectUrl>
         <RepositoryUrl>https://github.com/PicoHex/Zaabee.Utils</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
-        <Authors>Roman Du</Authors>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <RepositoryType>git</RepositoryType>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <Authors>Mutuduxf</Authors>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
 
 </Project>
