--- a/demos/CodeTimerDemo/CodeTimerDemo.csproj
+++ b/demos/CodeTimerDemo/CodeTimerDemo.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Zaabee.CodeTimer\Zaabee.CodeTimer.csproj" />
+      <ProjectReference Include="..\..\src\Aoxe.CodeTimer\Aoxe.CodeTimer.csproj" />
     </ItemGroup>
 
 </Project>
