--- a/src/Aoxe.Fake/Aoxe.Fake.csproj
+++ b/src/Aoxe.Fake/Aoxe.Fake.csproj
@@ -2,12 +2,12 @@
 
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net6.0;net8.0;net9.0</TargetFrameworks>
-        <PackageVersion>2024.1.4</PackageVersion>
-        <Version>2024.1.4</Version>
+        <PackageVersion>2024.1.0</PackageVersion>
+        <Version>2024.1.0</Version>
         <Description>Fake tools for test.</Description>
-        <PackageTags>Zaabee;Fake tools</PackageTags>
-        <PackageProjectUrl>https://github.com/PicoHex</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/PicoHex/Zaabee.Utils</RepositoryUrl>
+        <PackageTags>Aoxe;Fake tools</PackageTags>
+        <PackageProjectUrl>https://github.com/AoxeTech</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/AoxeTech/Aoxe.Utils</RepositoryUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
