--- a/tests/CodeTimerTest/CodeTimerTest.csproj
+++ b/tests/CodeTimerTest/CodeTimerTest.csproj
@@ -18,6 +18,6 @@
 		</PackageReference>
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\..\src\Zaabee.CodeTimer\Zaabee.CodeTimer.csproj" />
+		<ProjectReference Include="..\..\src\Aoxe.CodeTimer\Aoxe.CodeTimer.csproj" />
 	</ItemGroup>
 </Project>
